--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,8 @@ interface Props {
 }
 
 const { title, description, image, pagefindIgnore, article } = Astro.props;
+
+const ogImage = image?.src;
 ---
 
 <!DOCTYPE html>
@@ -37,7 +39,7 @@ const { title, description, image, pagefindIgnore, article } = Astro.props;
 
 		<meta name="og:title" content={title} />
 		{description && <meta name="og:description" content={description} />}
-		<meta name="og:image" content={image?.src || '/img/og.png'} />
+		{ogImage && <meta name="og:image" content={ogImage} />}
 		<meta name="og:url" content={Astro.site} />
 		{!article && <meta name="og:type" content="website" />}
 		<meta name="og:locale" content="en" />
@@ -59,7 +61,7 @@ const { title, description, image, pagefindIgnore, article } = Astro.props;
 		)}
 		<meta name="twitter:title" content={title} />
 		{description && <meta name="twitter:description" content={description} />}
-		<meta name="twitter:image" content={image?.src || '/img/og.png'} />
+		{ogImage && <meta name="twitter:image" content={ogImage} />}
 	</head>
 	<body>
 		<main data-pagefind-ignore={pagefindIgnore}>
